test/libyul/yulSyntaxTests/invalid/leave_items_on_stack.yul
{
    mload(0)
}
// ----
// TypeError 3083: (6-14): Top-level expressions are not supposed to return values (this expression returns 1 value). Use ``pop()`` or assign them.
